--- a/free-nodes/index.htm
+++ b/free-nodes/index.htm
@@ -88,8 +88,25 @@
                                 <div class="row">
                     <div class="col-lg-4">
                         <div class="position-relative">
+                            <a href="/free-nodes/2024-3-6-free-ssr-node.htm">
+                                <img src="/uploads/20240214/72b0aaa8811f609f03eeb6123bd29eae.webp" alt="3月6日22.2M/S|V2ray/SSR/Shadowrocket/Clash免费节点每天更新订阅链接" class="radius-image img-fluid">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-lg-8 mt-lg-0 mt-5">
+                        <a href="/free-nodes/2024-3-6-free-ssr-node.htm">
+                            <h3 class="title-big">3月6日22.2M/S|V2ray/SSR/Shadowrocket/Clash免费节点每天更新订阅链接</h3>
+                        </a>
+                        <p class="mt-4">这一次的节点更新覆盖了韩国、香港、加拿大、欧洲、新加坡、日本、美国等地区,最高速度可达22.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                        <p class="title-small mb-2 pull-right">
+                            3月6日                        </p>
+                    </div>
+                </div>
+                                <div class="row">
+                    <div class="col-lg-4">
+                        <div class="position-relative">
                             <a href="/free-nodes/2024-3-5-free-subscribe-node.htm">
-                                <img src="/uploads/20240214/e1cb19dc65fe145e5652417f9d9ba379.webp" alt="" class="radius-image img-fluid">
+                                <img src="/uploads/20240214/e1cb19dc65fe145e5652417f9d9ba379.webp" alt="3月5日19.2M/S|Clash/V2ray/SSR/Shadowrocket免费节点每天更新订阅链接" class="radius-image img-fluid">
                             </a>
                         </div>
                     </div>
@@ -106,7 +123,7 @@
                     <div class="col-lg-4">
                         <div class="position-relative">
                             <a href="/free-nodes/2024-3-4-clash-node.htm">
-                                <img src="/uploads/20240214/7caaec5e02bb1ce363bb9268b81306bf.webp" alt="" class="radius-image img-fluid">
+                                <img src="/uploads/20240214/7caaec5e02bb1ce363bb9268b81306bf.webp" alt="3月4日21.4M/S|Clash/Shadowrocket/SSR/V2ray免费节点每天更新订阅链接" class="radius-image img-fluid">
                             </a>
                         </div>
                     </div>
@@ -123,7 +140,7 @@
                     <div class="col-lg-4">
                         <div class="position-relative">
                             <a href="/free-nodes/2024-3-3-clash-node.htm">
-                                <img src="/uploads/20240214/e1cb19dc65fe145e5652417f9d9ba379.webp" alt="" class="radius-image img-fluid">
+                                <img src="/uploads/20240214/e1cb19dc65fe145e5652417f9d9ba379.webp" alt="3月3日19.2M/S|Clash/SSR/Shadowrocket/V2ray免费节点每天更新订阅链接" class="radius-image img-fluid">
                             </a>
                         </div>
                     </div>
@@ -140,7 +157,7 @@
                     <div class="col-lg-4">
                         <div class="position-relative">
                             <a href="/free-nodes/2024-3-2-free-ssr-node.htm">
-                                <img src="/uploads/20240214/830880c859159c166b79b0f24c26ce86.webp" alt="" class="radius-image img-fluid">
+                                <img src="/uploads/20240214/830880c859159c166b79b0f24c26ce86.webp" alt="3月2日21M/S|Shadowrocket/SSR/Clash/V2ray免费节点每天更新订阅链接" class="radius-image img-fluid">
                             </a>
                         </div>
                     </div>
@@ -157,7 +174,7 @@
                     <div class="col-lg-4">
                         <div class="position-relative">
                             <a href="/free-nodes/2024-3-1-clash-node-daily-updates.htm">
-                                <img src="/uploads/20240214/1858f1fbda8b7e0681ab8c087dbb22a2.webp" alt="" class="radius-image img-fluid">
+                                <img src="/uploads/20240214/1858f1fbda8b7e0681ab8c087dbb22a2.webp" alt="3月1日18.5M/S|Shadowrocket/SSR/V2ray/Clash免费节点每天更新订阅链接" class="radius-image img-fluid">
                             </a>
                         </div>
                     </div>
@@ -174,7 +191,7 @@
                     <div class="col-lg-4">
                         <div class="position-relative">
                             <a href="/free-nodes/2024-2-29-free-subscribe-node.htm">
-                                <img src="/uploads/20240214/5620e7c3d4d3be48971add45a3c753f0.webp" alt="" class="radius-image img-fluid">
+                                <img src="/uploads/20240214/5620e7c3d4d3be48971add45a3c753f0.webp" alt="2月29日18.6M/S|Shadowrocket/Clash/SSR/V2ray免费节点每天更新订阅链接" class="radius-image img-fluid">
                             </a>
                         </div>
                     </div>
@@ -191,7 +208,7 @@
                     <div class="col-lg-4">
                         <div class="position-relative">
                             <a href="/free-nodes/2024-2-28-free-ssr-subscribe.htm">
-                                <img src="/uploads/20240214/5609cbe4a2710c44400fb8b4e8928ba9.webp" alt="" class="radius-image img-fluid">
+                                <img src="/uploads/20240214/5609cbe4a2710c44400fb8b4e8928ba9.webp" alt="2月28日22.8M/S|SSR/Shadowrocket/V2ray/Clash免费节点每天更新订阅链接" class="radius-image img-fluid">
                             </a>
                         </div>
                     </div>
@@ -208,7 +225,7 @@
                     <div class="col-lg-4">
                         <div class="position-relative">
                             <a href="/free-nodes/2024-2-27-free-clash.htm">
-                                <img src="/uploads/20240214/15f3c4212f40fda7ce92fc452dc790b7.webp" alt="" class="radius-image img-fluid">
+                                <img src="/uploads/20240214/15f3c4212f40fda7ce92fc452dc790b7.webp" alt="2月27日22.7M/S|V2ray/SSR/Clash/Shadowrocket免费节点每天更新订阅链接" class="radius-image img-fluid">
                             </a>
                         </div>
                     </div>
@@ -225,7 +242,7 @@
                     <div class="col-lg-4">
                         <div class="position-relative">
                             <a href="/free-nodes/2024-2-26-free-ssr-subscribe.htm">
-                                <img src="/uploads/20240214/8a5a27c189a802d655c0f68ddaa2713f.webp" alt="" class="radius-image img-fluid">
+                                <img src="/uploads/20240214/8a5a27c189a802d655c0f68ddaa2713f.webp" alt="2月26日20.3M/S|Clash/SSR/Shadowrocket/V2ray免费节点每天更新订阅链接" class="radius-image img-fluid">
                             </a>
                         </div>
                     </div>
@@ -238,27 +255,20 @@
                             2月26日                        </p>
                     </div>
                 </div>
-                                <div class="row">
-                    <div class="col-lg-4">
-                        <div class="position-relative">
-                            <a href="/free-nodes/2024-2-25-free-ssr-node.htm">
-                                <img src="/uploads/20240214/76102f0ccd571ad24bf10b61732c8d20.webp" alt="" class="radius-image img-fluid">
-                            </a>
-                        </div>
-                    </div>
-                    <div class="col-lg-8 mt-lg-0 mt-5">
-                        <a href="/free-nodes/2024-2-25-free-ssr-node.htm">
-                            <h3 class="title-big">2月25日20M/S|Clash/SSR/V2ray/Shadowrocket免费节点每天更新订阅链接</h3>
-                        </a>
-                        <p class="mt-4">这一次的节点更新覆盖了美国、日本、韩国、欧洲、香港、加拿大、新加坡等地区,最高速度可达20 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                        <p class="title-small mb-2 pull-right">
-                            2月25日                        </p>
-                    </div>
-                </div>
                 
                 <ul class="pagination"><li class="disabled"><span>&laquo;</span></li> <li class="active"><span>1</span></li><li><a href="/free-nodes/page-2.htm">2</a></li><li><a href="/free-nodes/page-3.htm">3</a></li> <li><a href="/free-nodes/page-2.htm">&raquo;</a></li></ul>            </div>
             <div class="col-md-4 w3l-services">
                 <h3 class="title-big mb-sm-3 mb-3">热门文章</h3>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/free-nodes/2024-3-6-free-ssr-node.htm">3月6日22.2M/S|V2ray/SSR/Shadowrocket/Clash免费节点每天更新订阅链接</a></h4>
+                <p>这一次的节点更新覆盖了韩国、香港、加拿大、欧洲、新加坡、日本、美国等地区,最高速度可达22.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+            </div>
+        </div>
+    </div>
+</div>
 <div class="row w3l-achievements">
     <div class="col-lg-12 item">
         <div class="card">
@@ -345,16 +355,6 @@
             <div class="box-wrap">
                 <h4><a href="/free-nodes/2024-2-26-free-ssr-subscribe.htm">2月26日20.3M/S|Clash/SSR/Shadowrocket/V2ray免费节点每天更新订阅链接</a></h4>
                 <p>这一次的节点更新覆盖了欧洲、香港、美国、加拿大、新加坡、日本、韩国等地区,最高速度可达20.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-2-25-free-ssr-node.htm">2月25日20M/S|Clash/SSR/V2ray/Shadowrocket免费节点每天更新订阅链接</a></h4>
-                <p>这一次的节点更新覆盖了美国、日本、韩国、欧洲、香港、加拿大、新加坡等地区,最高速度可达20 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
